Animation not updated when the active shape index isnt set #33682

Closed
opened 2012-12-27 22:35:18 +01:00 by gonz kowalski · 6 comments

%%%See attached blend file. Follow instructions in the internal script "bug" to reproduce the bug.

After generating shape keys per python the shape keys appear in "object data / shape keys". But moving the time slider doesn't animate the object in the 3D view. You first have to click with the mouse into the shape key list box (object data / shape keys) and select one of them, which apparently triggers some internal update. This manual step is tedious / not practicable when you shape-animate many objects that way (which is usually the whole point of scripting).

System: Win 7 64bit
Blender versions tested: 2.64a, 2.65a

%%%

%%%See attached blend file. Follow instructions in the internal script "bug" to reproduce the bug. After generating shape keys per python the shape keys appear in "object data / shape keys". But moving the time slider doesn't animate the object in the 3D view. You first have to click with the mouse into the shape key list box (object data / shape keys) and select one of them, which apparently triggers some internal update. This manual step is tedious / not practicable when you shape-animate many objects that way (which is usually the whole point of scripting). System: Win 7 64bit Blender versions tested: 2.64a, 2.65a %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%SOLUTION / WORKAROUND:

The problem does not occur if the shape keys (or at least one of them) are added via:

bpy.ops.object.shape_key_add

instead of of

bpy.context.object.shape_key_add

%%%

%%%SOLUTION / WORKAROUND: The problem does not occur if the shape keys (or at least one of them) are added via: bpy.ops.object.shape_key_add instead of of bpy.context.object.shape_key_add %%%
Member

%%%I wouldn't know what the difference is... but Campbell does!%%%

%%%I wouldn't know what the difference is... but Campbell does!%%%
Author

%%%bpy.ops.object.shape_key_add() is the call made by the add-button in the "object data / shape keys" panel. So I guess it performs some internal update.

bpy.context.object.shape_key_add() seems to modify the internal object data, without notifying the rest of the system about it.
%%%

%%%bpy.ops.object.shape_key_add() is the call made by the add-button in the "object data / shape keys" panel. So I guess it performs some internal update. bpy.context.object.shape_key_add() seems to modify the internal object data, without notifying the rest of the system about it. %%%

%%%fixed r53518.%%%

%%%fixed r53518.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#33682
No description provided.