fix [#33682] Animation not updated when the active shape index isnt set